# smt-backend

./: CHANGELOG.md  Cargo.toml  README.md  Schema.md  TODO.md  docker-compose.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/models/: meeting.rs  meeting_config.rs  mod.rs  team.rs  user.rs  user_time.rs
src/utils/: db.rs  mod.rs  responders.rs
