[package]
name = "smt_backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.152"
chrono = "0.4.23"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
deadpool = "0.9.5"
mongodb = "2.3.1"
async-trait = "0.1.64"
dotenv = "0.15.0"
futures = "0.3.26"
